--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,6 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-.env
-.env-prod
-.env-dev
 dist
 dist-ssr
 *.local
@@ -25,3 +22,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# .env
+.env
+.env-production
+.env-development
