--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-table": "^7.7.15",
     "@types/webpack-env": "^1.18.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
