--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,5 @@
+# VITE_API_URL=http://localhost:5173/api/v1
 VITE_API_URL=http://localhost:8080/api/v1
+# VITE_API_URL=https://shopping-app-server-oyqm.onrender.com/api/v1
+
+VITE_API_FIREBASE_API_KEY="AIzaSyDdHJFyjWRRSCnBt0rvyPji5_CXJCFmS-I"
