--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
 VITE_API_URL=https://shopping-app-server-oyqm.onrender.com/api/v1
+VITE_API_FIREBASE_API_KEY="AIzaSyDdHJFyjWRRSCnBt0rvyPji5_CXJCFmS-I"
